--- a/.gitignore
+++ b/.gitignore
@@ -512,3 +512,6 @@ fabric.properties
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
+
+# Kotlin app secrets
+NomadMapApp/secrets.properties
