Conected to AzureSQL Server

--- a/Group4API/Group4API/appsettings.json
+++ b/Group4API/Group4API/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=NomadDB;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=nomadg4.database.windows.net;Database=NomadDB;User Id=nomad;Password=N0m*d.G4;Trusted_Connection=False;Encrypt=True;"
   }
+
 }
