--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -10,7 +10,7 @@ env:
 on:
   push:
     branches:
-      - 'release/**'
+      - 'main/**'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
