build-android.yml update, only AAB and APK debug and release.

--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -1,18 +1,9 @@
-name: Generated APK AAB (Upload - Create Artifact To Github Action)
-
-env:
-  # The name of the main module repository
-  main_project_module: composeApp
-
-  # The name of the Play Store
-  playstore_name: NomadMapApp
+name: Android Build (APK + AAB)
 
 on:
   push:
     branches:
-      - 'main/**'
-
-  # Allows you to run this workflow manually from the Actions tab
+      - main
   workflow_dispatch:
 
 jobs:
@@ -20,63 +11,62 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      # Set Current Date As Env Variable
-      - name: Set current date as env variable
-        run: echo "date_today=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
-
-      # Set Repository Name As Env Variable
-      - name: Set repository name as env variable
-        run: echo "repository_name=$(echo '${{ github.repository }}' | awk -F '/' '{print $2}')" >> $GITHUB_ENV
-
-      - name: Set Up JDK
+      - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           distribution: 'zulu'
           java-version: '17'
-          cache: 'gradle'
 
-      - name: Change wrapper permissions
-        run: chmod +x ./gradlew
+      - name: Make gradlew executable
+        run: chmod +x ./NomadMapApp/gradlew
 
-      # Run Tests Build
-      - name: Run gradle tests
-        run: ./gradlew test
+      - name: Build Debug APK
+        uses: vgaidarji/android-github-actions-build@v1.1
+        with:
+          args: ./gradlew assembleDebug
+          working-directory: NomadMapApp
 
-      # Run Build Project
-      - name: Build gradle project
-        run: ./gradlew build
+      - name: Build Release APK
+        uses: vgaidarji/android-github-actions-build@v1.1
+        with:
+          args: ./gradlew assembleRelease
+          working-directory: NomadMapApp
 
-      # Create APK Debug
-      - name: Build apk debug project (APK) - ${{ env.main_project_module }} module
-        run: ./gradlew ${{ env.main_project_module }}:assembleDebug
+      - name: Build Debug AAB
+        uses: vgaidarji/android-github-actions-build@v1.1
+        with:
+          args: ./gradlew bundleDebug
+          working-directory: NomadMapApp
 
-      # Create APK Release
-      - name: Build apk release project (APK) - ${{ env.main_project_module }} module
-        run: ./gradlew ${{ env.main_project_module }}:assembleRelease
+      - name: Build Release AAB
+        uses: vgaidarji/android-github-actions-build@v1.1
+        with:
+          args: ./gradlew bundleRelease
+          working-directory: NomadMapApp
 
-      # Create Bundle AAB Release
-      - name: Build app bundle release (AAB) - ${{ env.main_project_module }} module
-        run: ./gradlew ${{ env.main_project_module }}:bundleRelease
-
-      # Upload APK Debug
-      - name: Upload APK Debug - ${{ env.repository_name }}
+      - name: Upload Debug APK
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ env.date_today }} - ${{ env.playstore_name }} - ${{ env.repository_name }} - APK(s) debug generated
-          path: ${{ env.main_project_module }}/build/outputs/apk/debug/
+          name: Debug APK
+          path: NomadMapApp/app/build/outputs/apk/debug/*.apk
 
-      # Upload APK Release
-      - name: Upload APK Release - ${{ env.repository_name }}
+      - name: Upload Release APK
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ env.date_today }} - ${{ env.playstore_name }} - ${{ env.repository_name }} - APK(s) release generated
-          path: ${{ env.main_project_module }}/build/outputs/apk/release/
+          name: Release APK
+          path: NomadMapApp/app/build/outputs/apk/release/*.apk
 
-      # Upload AAB Release
-      - name: Upload AAB (App Bundle) Release - ${{ env.repository_name }}
+      - name: Upload Debug AAB
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ env.date_today }} - ${{ env.playstore_name }} - ${{ env.repository_name }} - App bundle(s) AAB release generated
-          path: ${{ env.main_project_module }}/build/outputs/bundle/release/
+          name: Debug AAB
+          path: NomadMapApp/app/build/outputs/bundle/debug/*.aab
+
+      - name: Upload Release AAB
+        uses: actions/upload-artifact@v4
+        with:
+          name: Release AAB
+          path: NomadMapApp/app/build/outputs/bundle/release/*.aab
